Fixed verticle titles z-index

--- a/styles/components/_sectioncomponent.scss
+++ b/styles/components/_sectioncomponent.scss
@@ -6,7 +6,6 @@
     font-size: 9.16667rem;
     font-weight: 600;
     position: absolute;
-    z-index: 2;
     top: 50%;
     left: 7.91667rem;
     -webkit-transform: translateY(-50%);
@@ -15,6 +14,7 @@
     text-align: center;
     text-transform: lowercase;
     color: #ffffff20;
+    z-index: -100;
 
     span {
       position: absolute;
